--- a/.env
+++ b/.env
@@ -11,3 +11,10 @@ NFS_IP_DB="192.168.20.30"
 SERVERBD_IP_DB="192.168.20.50"
 
 WEB_ROUTE="/var/www/html/web"
+
+DB_NAME="mi_app_db"
+DB_USER1="web_app_user"
+DB_USER2="web_app_user"
+DB_PASS="una_contraseña_secreta_y_segura"
+
+REPOSITORIO_URL="https://github.com/josejuansanchez/iaw-practica-lamp.git"
