--- a/.env
+++ b/.env
@@ -1,20 +1,20 @@
 # IPs red_www
-BALANCEADOR_IP_WWW="192.168.10.1"
-SERVER1_IP_WWW="192.168.10.10"
-SERVER2_IP_WWW="192.168.10.20"
-NFS_IP_WWW="192.168.10.30"
+BALANCEADOR_IP_WWW=192.168.10.1
+SERVER1_IP_WWW=192.168.10.10
+SERVER2_IP_WWW=192.168.10.20
+NFS_IP_WWW=192.168.10.30
 
 # IPs red_db
-SERVER1_IP_DB="192.168.20.10"
-SERVER2_IP_DB="192.168.20.20"
-NFS_IP_DB="192.168.20.30"
-SERVERBD_IP_DB="192.168.20.50"
+SERVER1_IP_DB=192.168.20.10
+SERVER2_IP_DB=192.168.20.20
+NFS_IP_DB=192.168.20.30
+SERVERBD_IP_DB=192.168.20.50
 
-WEB_ROUTE="/var/www/html/web"
+WEB_ROUTE=/var/www/html/web
 
-DB_NAME="mi_app_db"
-DB_USER1="web_app_user"
-DB_USER2="web_app_user"
-DB_PASS="una_contraseña_secreta_y_segura"
+DB_NAME=mi_app_db
+DB_USER1=web_app_user
+DB_USER2=web_app_user
+DB_PASS=una_contraseña_secreta_y_segura
 
-REPOSITORIO_URL="https://github.com/josejuansanchez/iaw-practica-lamp.git"
+REPOSITORIO_URL=https://github.com/josejuansanchez/iaw-practica-lamp.git
