--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ SERVER2_IP_DB=192.168.20.20
 NFS_IP_DB=192.168.20.30
 SERVERBD_IP_DB=192.168.20.50
 
-WEB_ROUTE=/var/www/html/web
+#WEB_ROUTE=/var/www/html/web
 
 DB_NAME=mi_app_db
 DB_USER1=web_app_user
